--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -16,4 +16,5 @@ jobs:
       - run: npm run lint
       - run: npm run build
       - run: npm test
-      - uses: ./
+      - name: nitpicker
+        uses: ./
