--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "license": "MIT",
   "dependencies": {
     "@actions/core": "^1.0.0",
+    "@actions/github": "^1.1.0",
     "js-yaml": "^3.13.1"
   },
   "devDependencies": {
