--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -7,7 +7,7 @@ on:
       - 'releases/*'
 
 jobs:
-  test:
+  build-and-test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
@@ -18,3 +18,5 @@ jobs:
       - run: npm test
       - name: nitpicker
         uses: ./
+        with:
+          token: '${{ secrets.GITHUB_TOKEN }}'
