Specify push and pullrequest trigger

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -1,7 +1,6 @@
 name: 'Build and test nitpicker'
 on:
-  pull_request:
-  push:
+  [push, pull_request]:
     branches:
       - master
       - 'releases/*'
