Revert "Specify push and pullrequest trigger"
This reverts commit 6cf8be5235aded8dca6eb85d9b164269a43ba392.

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -1,6 +1,7 @@
 name: 'Build and test nitpicker'
 on:
-  [push, pull_request]:
+  pull_request:
+  push:
     branches:
       - master
       - 'releases/*'
