--- a/.github/nitpicks.yml
+++ b/.github/nitpicks.yml
@@ -2,7 +2,7 @@
     ## Notice
     Thanks for this contribution. We _really_ appreciate your help!
   pathFilter:
-    - '**'
+    - '*'
 - markdown: |
     ## Blocking issue
     We no longer check in binaries to this repo - our new convention is to use NuGet packages.
@@ -10,7 +10,7 @@
     Read more about this change [here](https://www.nuget.org/).
   blocking: true
   pathFilter:
-    - '**/*.dll'
+    - '*.dll'
 - markdown: |
     ## Information
     You modified a file that controls the payment processing for the company. Please ensure that you have completed all of the following:
@@ -18,4 +18,4 @@
       - [ ] Tested change in multiple web browsers (Chrome, Firefox, Safari, and Edge)
       - [ ] Updated documentation with any API changes
   pathFilter:
-    - 'payments/**'
+    - '*.ts'
