--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
   "dependencies": {
     "@actions/core": "^1.0.0",
     "@actions/github": "^1.1.0",
-    "js-yaml": "^3.13.1"
+    "js-yaml": "^3.13.1",
+    "minimatch": "^3.0.4"
   },
   "devDependencies": {
     "@types/jest": "^24.0.13",
     "@types/js-yaml": "^3.12.1",
+    "@types/minimatch": "^3.0.3",
     "@types/node": "^12.0.4",
     "@typescript-eslint/eslint-plugin": "^2.8.0",
     "@typescript-eslint/parser": "^2.8.0",
