Split full repo name to get owner

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -19,4 +19,5 @@ jobs:
       - name: nitpicker
         uses: ./
         with:
+          nitpickerFile: './.github/nitpicks.yml'
           token: '${{ secrets.GITHUB_TOKEN }}'
