Rename actions parameter

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -19,5 +19,5 @@ jobs:
       - name: nitpicker
         uses: ./
         with:
-          nitpickerFile: './.github/nitpicks.yml'
+          nitpicksFile: './.github/nitpicks.yml'
           token: '${{ secrets.GITHUB_TOKEN }}'
