--- a/.github/nitpicks.yml
+++ b/.github/nitpicks.yml
@@ -11,6 +11,8 @@
   blocking: true
   pathFilter:
     - '**/*.dll'
+    - '**/*.yml'
+    - '**/*.yaml'
 - markdown: |
     ## Information
     You modified a file that controls the payment processing for the company. Please ensure that you have completed all of the following:
