--- a/.github/nitpicks.yml
+++ b/.github/nitpicks.yml
@@ -1,6 +1,4 @@
-- markdown: |
-    ## Notice
-    Thanks for this contribution. We _really_ appreciate your help! :heart:
+- markdown: "## Notice \n Thanks for this contribution. We _really_ appreciate your help! :heart:"
   pathFilter:
     - '*'
 - markdown: |
