Check for * pattern

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -21,3 +21,4 @@ jobs:
         with:
           nitpicksFile: './.github/nitpicks.yml'
           token: '${{ secrets.GITHUB_TOKEN }}'
+          ACTIONS_STEP_DEBUG: true
