--- a/.github/nitpicks.yml
+++ b/.github/nitpicks.yml
@@ -1,19 +1,15 @@
-- markdown: "## Notice\nThanks for this contribution. We _really_ appreciate your help! :heart:"
+- markdown: |
+    ## Rockstar alert
+    Thanks for this contribution, we _really_ appreciate your help :heart:!
   pathFilter:
     - '*'
 - markdown: |
-    ## Blocking issue
-    We no longer check in binaries to this repo - our new convention is to use NuGet packages.
-
-    Read more about this change [here](https://www.nuget.org/).
+    Please proofread any changes to documentation.
+  pathFilter:
+    - '**/*.md'
+- markdown: |
+    ## Uh oh
+    Don't check in binaries...we use GitHub package registry for that!
   blocking: true
   pathFilter:
     - '+**/*.dll'
-- markdown: |
-    ## Information
-    You modified a file that controls the payment processing for the company. Please ensure that you have completed all of the following:
-      - [ ] Added unit tests to verify changes
-      - [ ] Tested change in multiple web browsers (Chrome, Firefox, Safari, and Edge)
-      - [ ] Updated documentation with any API changes
-  pathFilter:
-    - '**/*.ts'
