--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc",
     "test": "jest",
     "lint": "eslint . --ext .ts,.tsx --ignore-pattern node_modules/",
-    "pack": "ncc build"
+    "pack": "ncc build",
+    "all": "npm run build && npm run lint && npm run pack && npm test"
   },
   "repository": {
     "type": "git",
