--- a/.github/nitpicks.yml
+++ b/.github/nitpicks.yml
@@ -5,10 +5,10 @@
 - markdown: |
     Are you _sure_ you want to be console logging or debuggering here?? :trollface:
   pathFilter: 'src/**'
-  contentFilter:
-    - '(\\+\\s*console.log\\(.*\\))'
-    - '(\\+\\s*debugger)'
 
+  # contentFilter:
+  #   - '(\\+\\s*console.log\\(.*\\))'
+  #   - '(\\+\\s*debugger)'
 - markdown: |
     Please proofread any changes to documentation.
   pathFilter:
