--- a/.github/nitpicks.yml
+++ b/.github/nitpicks.yml
@@ -22,8 +22,8 @@
     - '+**/*.dll'
 
 - markdown: |
-    Testing - fail if the file doesn't include "always()"
+    Testing - fail if the file doesn't include "!always()"
   pathFilter:
     - '.github/workflows/example.yml'
   contentFilter:
-    - '!always()'
+    - '!(!always())'
